--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: ruby
+script:
+  - bundle install
+  - rake db:create
+  - rake db:migrate
+  - rake db:seed
+  - rails r lib/scraperbom.rb
+
 rvm:
   - 2.2.1
