location controller and view

--- a/test/fixtures/stations.yml
+++ b/test/fixtures/stations.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  stationID: MyString
   name: MyString
-  latitude: 1.5
-  longitude: 1.5
+  geolocation: 
 
 two:
+  stationID: MyString
   name: MyString
-  latitude: 1.5
-  longitude: 1.5
+  geolocation: 
