--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
   - rake db:create
   - rake db:migrate
   - rake db:seed
-  - sudo ./lib/scraperbom.rb
+  - sudo rails r ./lib/scraperbom.rb
 
 rvm:
   - 2.2.1
